<resources>
    <string name="app_name">Devhub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Logop1">_</string>
    <string name="logoP2">devHub</string>
    <string name="sign_up">Sign Up</string>
    <string name="devhub">devHub</string>
    <string name="logop1">_</string>
    <string name="loginswitchtext">Already have an account? Log in here!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="no_account_sign_up_here">No Account? Sign Up Here!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logov2">d</string>
    <string name="title_activity_status_post">status_post</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profile_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="postHint">What\'s new?</string>
    <string name="buttonHintPost">Send Post button</string>
    <string name="PostHint">What\'s new?</string>
    <string name="d">d</string>
    <string name="SplashLogo_">_</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="imagecontentDesc">picture template for messages</string>
    <string name="timePlaceholder">this time here</string>
    <string name="default_notification_channel_id">Notification ID</string>
</resources>