<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2c2c"
    tools:context=".HomePage">

    <SearchView
        android:id="@+id/searchView2"
        android:layout_width="211dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:background="#3E3E3E"
        app:layout_constraintEnd_toStartOf="@+id/LogoutBtn"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/homeLogo"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postFeed"
        android:layout_width="0dp"
        android:layout_height="512dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView2">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/homeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/logov2"
        android:textColor="#B7C3B8"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/LogoutBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:text="@string/logout"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/logoBlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Logop1"
        android:textColor="#4AAC24"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameView"
        app:layout_constraintEnd_toStartOf="@+id/homeLogo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFeed"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#191919">

            <Button
                android:id="@+id/Post_Btn"
                android:layout_width="48dp"
                android:layout_height="44dp"
                android:background="@drawable/rounded_button"
                android:enabled="true"
                android:text="+"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/nav_Coding"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:background="@drawable/ic_coding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/Post_Btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.526" />

            <Button
                android:id="@+id/nav_HomeHome"
                android:layout_width="32dp"
                android:layout_height="31dp"
                android:background="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nav_Coding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/nav_Notifs"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:background="@drawable/ic_notifications"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Post_Btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.526" />

            <Button
                android:id="@+id/nav_ProfileHome"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nav_Notifs"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.463" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:hint="Username goes here"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/postFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView2"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/editProfileBtn"
        android:layout_width="219dp"
        android:layout_height="35dp"
        android:fontFamily="@font/poppins_light"
        android:text="Edit Profile"
        app:layout_constraintBottom_toTopOf="@+id/postFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameView" />

    <TextView
        android:id="@+id/bioTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editProfileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameView" />


</androidx.constraintlayout.widget.ConstraintLayout>
